# frikadellen-baf-botcraft

./: .gitignore  BUILD.md  CMakeLists.txt  DEVELOPMENT.md  IMPLEMENTATION.md  README.md  build.sh  config.toml.example
.github/workflows/: release.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  frikadellen-baf
include/: auction_handler.hpp  bazaar_handler.hpp  cofl_client.hpp  config.hpp  logger.hpp  utils.hpp  webhook.hpp
src/: auction_handler.cpp  bazaar_handler.cpp  cofl_client.cpp  config.cpp  logger.cpp  main.cpp  utils.cpp  webhook.cpp
